# iced_video_player

./: Cargo.toml
examples/: dmabuf_verify.rs  minimal.rs
src/: lib.rs  pipeline.rs  video.rs  video_player.rs
