[package]
name = "iced_video_player"
description = "A convenient video player widget for Iced"
homepage = "https://github.com/jazzfool/iced_video_player"
repository = "https://github.com/jazzfool/iced_video_player"
readme = "README.md"
keywords = ["gui", "iced", "video"]
categories = ["gui", "multimedia"]
version = "0.6.0"
authors = ["jazzfool"]
edition = "2024"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = [
    ".media/test.mp4"
]

[dependencies]
iced = { git = "https://github.com/playtron-os/iced.git", rev = "e84471cd", features = ["image", "advanced", "wgpu"] }
iced_wgpu = { git = "https://github.com/playtron-os/iced.git", rev = "e84471cd" }
gstreamer = "0.23"
gstreamer-app = "0.23" # appsink
gstreamer-base = "0.23" # basesrc
gstreamer-video = "0.23" # VideoMeta
glib = "0.20" # gobject traits and error type
log = "0.4"
thiserror = "1"
url = "2" # media uri

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-unknown-unknown"]
